[gd_scene load_steps=30 format=1]

[ext_resource path="res://Estro.gd" type="Script" id=1]
[ext_resource path="res://Elementoj/Finejo.tscn" type="PackedScene" id=2]
[ext_resource path="res://Tiparoj/roboto.fnt" type="BitmapFont" id=3]
[ext_resource path="res://Tegolaroj/Blokiloj.tres" type="TileSet" id=4]
[ext_resource path="res://Elementoj/Nitrogeno.tscn" type="PackedScene" id=5]
[ext_resource path="res://Elementoj/Bombo.tscn" type="PackedScene" id=6]
[ext_resource path="res://K.tscn" type="PackedScene" id=7]
[ext_resource path="res://Navo.gd" type="Script" id=8]
[ext_resource path="res://Malamikoj/M.tscn" type="PackedScene" id=9]
[ext_resource path="res://Butonoj/rapidi.png" type="Texture" id=10]
[ext_resource path="res://Butonoj/rapidi_premita.png" type="Texture" id=11]
[ext_resource path="res://Butonoj/turni_dekstre.png" type="Texture" id=12]
[ext_resource path="res://Butonoj/turni_dekstre_premita.png" type="Texture" id=13]
[ext_resource path="res://Butonoj/turni_maldekstre.png" type="Texture" id=14]
[ext_resource path="res://Butonoj/turni_maldekstre_premita.png" type="Texture" id=15]
[ext_resource path="res://Butonoj/bombi_premita.png" type="Texture" id=16]
[ext_resource path="res://Butonoj/bombi.png" type="Texture" id=17]
[ext_resource path="res://Elementoj/bombo.png" type="Texture" id=18]
[ext_resource path="res://Elementoj/rekomenci.png" type="Texture" id=19]
[ext_resource path="res://Sonoj/371878__mafon2__trickle-clicker.ogg" type="AudioStream" id=20]
[ext_resource path="res://Sonoj/132025__user1994__take-it.ogg" type="AudioStream" id=21]
[ext_resource path="res://Sonoj/51464__smcameron__bombexplosion.ogg" type="AudioStream" id=22]
[ext_resource path="res://Sonoj/365623__cinningbao__0804-094043-metal-grinding-or-drilling-30secs.ogg" type="AudioStream" id=23]
[ext_resource path="res://Tegolaroj/Arboj.tres" type="TileSet" id=24]
[ext_resource path="res://Muzikoj/Komiku_-_02_-_Level_1__Jump_and_shoot_stuff_101.ogg" type="AudioStream" id=25]

[sub_resource type="NavigationPolygon" id=1]

vertices = Vector2Array( -15812, -17600, -628, -20048, -452, -13904, -15812, -480, 28524, -624, 940, -13920, 28236, -19360, 1724, -20464 )
polygons = [ IntArray( 0, 1, 2, 3 ), IntArray( 4, 3, 2, 5 ), IntArray( 6, 4, 5, 7 ) ]
outlines = [ Vector2Array( 28524, -624, 28236, -19360, 1724, -20464, 940, -13920, -452, -13904, -628, -20048, -15812, -17600, -15812, -480 ) ]

[sub_resource type="CircleShape2D" id=2]

custom_solver_bias = 0.0
radius = 135.0

[sub_resource type="StyleBoxFlat" id=3]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
bg_color = Color( 0.258824, 0.647059, 0.960784, 1 )
light_color = Color( 0.8, 0.8, 0.8, 1 )
dark_color = Color( 0.8, 0.8, 0.8, 1 )
border_size = 0
border_blend = true
draw_bg = true

[sub_resource type="StyleBoxFlat" id=4]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
bg_color = Color( 1, 0.654902, 0.14902, 1 )
light_color = Color( 0.8, 0.8, 0.8, 1 )
dark_color = Color( 0.8, 0.8, 0.8, 1 )
border_size = 0
border_blend = true
draw_bg = true

[node name="Bazo" type="Node2D"]

script/script = ExtResource( 1 )

[node name="Finejo" parent="." instance=ExtResource( 2 )]

transform/pos = Vector2( 176, -14816 )

[node name="Etikedo" type="Label" parent="Finejo"]

rect/scale = Vector2( 3, 3 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -496.0
margin/top = -144.0
margin/right = -119.0
margin/bottom = -67.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Sekura Domo"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Blokilo" type="TileMap" parent="."]

transform/pos = Vector2( 0, -1280 )
mode = 0
tile_set = ExtResource( 4 )
cell/size = Vector2( 128, 128 )
cell/quadrant_size = 16
cell/custom_transform = Matrix32( 1, 0, 0, 1, 0, 0 )
cell/half_offset = 2
cell/tile_origin = 0
cell/y_sort = false
collision/use_kinematic = false
collision/friction = 1.0
collision/bounce = 0.0
collision/layers = 1
collision/mask = 0
occluder/light_mask = 1
tile_data = IntArray(  )
__meta__ = {
"_edit_lock_": true
}

[node name="Limo" type="TileMap" parent="."]

transform/pos = Vector2( 0, -1280 )
mode = 0
tile_set = ExtResource( 4 )
cell/size = Vector2( 128, 128 )
cell/quadrant_size = 16
cell/custom_transform = Matrix32( 1, 0, 0, 1, 0, 0 )
cell/half_offset = 2
cell/tile_origin = 0
cell/y_sort = false
collision/use_kinematic = false
collision/friction = 1.0
collision/bounce = 0.0
collision/layers = 1024
collision/mask = 3
occluder/light_mask = 1
tile_data = IntArray( -7405574, 6, -7405573, 6, -7405572, 6, -7405571, 6, -7405570, 6, -7405569, 6, -7471104, 6, -7471103, 6, -7471102, 6, -7471101, 6, -7471100, 6, -7471099, 6, -7471098, 6, -7471097, 6, -7471096, 6, -7340038, 6, -7405560, 6, -7274502, 6, -7340024, 6, -7208966, 6, -7274488, 6, -7143430, 6, -7208952, 6, -7077894, 6, -7143416, 6, -7012358, 6, -7077880, 6, -6946822, 6, -7012344, 6, -6881286, 6, -6946808, 6, -6815750, 6, -6881272, 6, -6750214, 6, -6750213, 6, -6750212, 6, -6750211, 6, -6815739, 6, -6815738, 6, -6815737, 6, -6815736, 6, 589720, -1610612735, 589721, -1610612735, 589722, -1610612735, 589723, -1610612735, 589724, -1610612735, 589725, -1610612735, 589726, -1610612735, 589727, -1610612735, 589728, -1610612735, 589729, -1610612735, 589730, -1610612735, 589731, -1610612735, 589732, -1610612735, 589733, -1610612735, 589734, -1610612735, 589735, -1610612735, 589736, -1610612735, 589737, -1610612735, 589738, -1610612735, 589739, -1610612735, 589740, -1610612735, 589741, -1610612735, 589742, -1610612735, 589743, -1610612735, 589744, -1610612735, 589745, -1610612735, 589746, -1610612735, 589747, -1610612735, 589748, -1610612735, 589749, -1610612735, 589750, -1610612735, 589751, -1610612735, 589752, -1610612735, 589753, -1610612735, 589754, -1610612735, 589755, -1610612735, 589756, -1610612735, 589757, -1610612735, 589758, -1610612735, 589759, -1610612735, 589760, -1610612735, 589761, -1610612735, 589762, -1610612735, 589763, -1610612735, 589764, -1610612735, 589765, -1610612735, 589766, -1610612735, 589767, -1610612735, 589768, -1610612735, 589769, -1610612735, 589770, -1610612735, 589771, -1610612735, 589772, -1610612735, 589773, -1610612735, 589774, -1610612735, 589775, -1610612735, 589776, -1610612735, 589777, -1610612735, 589778, -1610612735, 589779, -1610612735, 589780, -1610612735, 589781, -1610612735, 589782, -1610612735, 589783, -1610612735, 589784, -1610612735, 589785, -1610612735, 589786, -1610612735, 589787, -1610612735, 589788, -1610612735, 589789, -1610612735, 589790, -1610612735, 589791, -1610612735, 589792, -1610612735, 589793, -1610612735, 589794, -1610612735, 589795, -1610612735, 589796, -1610612735, 589797, -1610612735, 589798, -1610612735, 589799, -1610612735, 589800, -1610612735, 589801, -1610612735, 589802, -1610612735, 589803, -1610612735, 589804, -1610612735, 589805, -1610612735, 589806, -1610612735, 589807, -1610612735, 589808, -1610612735, 589809, -1610612735, 589810, -1610612735, 589811, -1610612735, 589812, -1610612735, 589813, -1610612735, 589814, -1610612735, 589815, -1610612735, 589816, -1610612735, 589817, -1610612735, 589818, -1610612735, 589819, -1610612735, 589820, -1610612735, 589821, -1610612735, 589822, -1610612735, 589823, -1610612735, 524288, -1610612734, 524294, 2, 524295, -1610612735, 524296, -1610612735, 524297, -1610612735, 524298, -1610612735, 524299, -1610612735, 524300, -1610612735, 524301, -1610612735, 524302, -1610612735, 524303, -1610612735, 524304, -1610612735, 524305, -1610612735, 524306, -1610612735, 524307, -1610612735, 524308, -1610612735, 524309, -1610612735, 524310, -1610612735, 524311, -1610612735, 524312, -1610612735, 524313, -1610612735, 524314, -1610612735, 524315, -1610612735, 524316, -1610612735, 524317, -1610612735, 524318, -1610612735, 524319, -1610612735, 524320, -1610612735, 524321, -1610612735, 524322, -1610612735, 524323, -1610612735, 524324, -1610612735, 524325, -1610612735, 524326, -1610612735, 524327, -1610612735, 524328, -1610612735, 524329, -1610612735, 524330, -1610612735, 524331, -1610612735, 524332, -1610612735, 524333, -1610612735, 524334, -1610612735, 524335, -1610612735, 524336, -1610612735, 524337, -1610612735, 524338, -1610612735, 524339, -1610612735, 524340, -1610612735, 524341, -1610612735, 524342, -1610612735, 524343, -1610612735, 524344, -1610612735, 524345, -1610612735, 524346, -1610612735, 524347, -1610612735, 524348, -1610612735, 524349, -1610612735, 524350, -1610612735, 524351, -1610612735, 524352, -1610612735, 524353, -1610612735, 524354, -1610612735, 524355, -1610612735, 524356, -1610612735, 524357, -1610612735, 524358, -1610612735, 524359, -1610612735, 524360, -1610612735, 524361, -1610612735, 524362, -1610612735, 524363, -1610612735, 524364, -1610612735, 524365, -1610612735, 524366, -1610612735, 524367, -1610612735, 524368, -1610612735, 524369, -1610612735, 524370, -1610612735, 524371, -1610612735, 524372, -1610612735, 524373, -1610612735, 524374, -1610612735, 524375, -1610612735, 524376, -1610612735, 524377, -1610612735, 524378, -1610612735, 524379, -1610612735, 524380, -1610612735, 524381, -1610612735, 524382, -1610612735, 524383, -1610612735, 524384, -1610612735, 524385, -1610612735, 524386, -1610612735, 524387, -1610612735, 524388, -1610612735, 524389, -1610612735, 524390, -1610612735, 524391, -1610612735, 524392, -1610612735, 524393, -1610612735, 524394, -1610612735, 524395, -1610612735, 524396, -1610612735, 524397, -1610612735, 524398, -1610612735, 524399, -1610612735, 524400, -1610612735, 524401, -1610612735, 524402, -1610612735, 524403, -1610612735, 524404, -1610612735, 524405, -1610612735, 524406, -1610612735, 524407, -1610612735, 524408, -1610612735, 524409, -1610612735, 524410, -1610612735, 524411, -1610612735, 524412, -1610612735, 524413, -1610612735, 524414, -1610612735, 524415, -1610612735, 524416, -1610612735, 524417, -1610612735, 524418, -1610612735, 524419, -1610612735, 524420, -1610612735, 524421, -1610612735, 524422, -1610612735, 524423, -1610612735, 524424, -1610612735, 524425, -1610612735, 524426, -1610612735, 524427, -1610612735, 524428, -1610612735, 524429, -1610612735, 524430, -1610612735, 524431, -1610612735, 524432, -1610612735, 524433, -1610612735, 524434, -1610612735, 524435, -1610612735, 524436, -1610612735, 524437, -1610612735, 524438, -1610612735, 524439, -1610612735, 524440, -1610612735, 524441, -1610612735, 524442, -1610612735, 524443, -1610612735, 524444, -1610612735, 524445, -1610612735, 524446, -1610612735, 524447, -1610612735, 524448, -1610612735, 524449, -1610612735, 524450, -1610612735, 524451, -1610612735, 524452, -1610612735, 524453, -1610612735, 524454, -1610612735, 524455, -1610612735, 524456, -1610612735, 524457, -1610612735, 524458, -1610612735, 524459, -1610612735, 524460, -1610612735, 524461, -1610612735, 524462, -1610612735, 524463, -1610612735, 524464, -1610612735, 524465, -1610612735, 524466, -1610612735, 524467, -1610612735, 524468, -1610612735, 524469, -1610612735, 524470, -1610612735, 524471, -1610612735, 524472, -1610612735, 524473, -1610612735, 524474, -1610612735, 524475, -1610612735, 524476, -1610612735, 524477, -1610612735, 524478, -1610612735, 524479, -1610612735, 524480, -1610612735, 524481, -1610612735, 524482, -1610612735, 524483, -1610612735, 524484, -1610612735, 524485, -1610612735, 524486, -1610612735, 524487, -1610612735, 524488, -1610612735, 524489, -1610612735, 524490, -1610612735, 524491, -1610612735, 524492, -1610612735, 524493, -1610612735, 524494, -1610612735, 524495, -1610612735, 524496, -1610612735, 524497, -1610612735, 524498, -1610612735, 524499, -1610612735, 524500, -1610612735, 524501, -1610612735, 524502, -1610612735, 524503, -1610612735, 524504, -1610612735, 524505, -1610612735, 524506, -1610612735, 524507, -1610612735, 524508, -1610612735, 589824, 1, 589830, 1, 655360, 1, 655366, 1, 720896, 1, 720902, 1, 786432, 1, 786438, 1, 851968, 1, 851974, 1, 917504, 1, 917510, 1, 983040, 1, 983046, 1, 1048576, 1, 1048582, 1, 1114112, 1, 1114118, 1, 1179648, 1, 1179654, 1, 1245184, 1, 1245190, 1, 1310720, 1, 1310726, 1, 1376256, 1, 1376262, 1, 1441792, 1, 1441798, 1, 1507328, 1, 1507334, 1, 1572864, 1, 1572870, 1, 1638400, 1, 1638406, 1, 1703936, 1, 1703942, 1, 1769472, 1, 1769478, 1, 1835008, 1, 1835014, 1, 1900544, 1, 1900550, 1, 1966080, 1, 1966086, 1, 2031616, 1, 2031622, 1, 2097152, 1, 2097158, 1, 2162688, 1, 2162694, 1, 2228224, 1, 2228230, 1, 2293760, 1, 2293766, 1, 2359296, 1, 2359302, 1, 2424832, 1, 2424838, 1, 2490368, 1, 2490374, 1, 2555904, 1, 2555910, 1, 2621440, 1, 2621446, 1, 2686976, 1, 2686982, 1, 2752512, 1, 2752518, 1, 2818048, 1, 2818054, 1, 2883584, 1, 2883590, 1, 2949120, 1, 2949126, 1, 3014656, 1, 3014662, 1, 3080192, 1, 3080193, 5, 3080194, 5, 3080195, 5, 3080196, 5, 3080197, 5, 3080198, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Elementoj" type="Node2D" parent="."]

editor/display_folded = true
transform/pos = Vector2( 0, -1280 )

[node name="Nitrogeno1" parent="Elementoj" instance=ExtResource( 5 )]

transform/pos = Vector2( 448, -1472 )

[node name="Nitrogeno10" parent="Elementoj" instance=ExtResource( 5 )]

transform/pos = Vector2( 336, -1744 )

[node name="Nitrogeno2" parent="Elementoj" instance=ExtResource( 5 )]

transform/pos = Vector2( -672, -5424 )

[node name="Nitrogeno3" parent="Elementoj" instance=ExtResource( 5 )]

transform/pos = Vector2( -448, -6880 )

[node name="Nitrogeno4" parent="Elementoj" instance=ExtResource( 5 )]

transform/pos = Vector2( -576, -6432 )

[node name="Nitrogeno5" parent="Elementoj" instance=ExtResource( 5 )]

transform/pos = Vector2( -640, -5920 )

[node name="Nitrogeno6" parent="Elementoj" instance=ExtResource( 5 )]

transform/pos = Vector2( 1712, -8784 )

[node name="Nitrogeno7" parent="Elementoj" instance=ExtResource( 5 )]

transform/pos = Vector2( 1680, -9248 )

[node name="Nitrogeno8" parent="Elementoj" instance=ExtResource( 5 )]

transform/pos = Vector2( 1360, -9776 )

[node name="Nitrogeno9" parent="Elementoj" instance=ExtResource( 5 )]

transform/pos = Vector2( 1488, -8224 )

[node name="Bombo" parent="Elementoj" instance=ExtResource( 6 )]

transform/pos = Vector2( 448, 176 )

[node name="Bombo1" parent="Elementoj" instance=ExtResource( 6 )]

transform/pos = Vector2( 416, -976 )

[node name="Bombo2" parent="Elementoj" instance=ExtResource( 6 )]

transform/pos = Vector2( 736, -2032 )

[node name="Bombo3" parent="Elementoj" instance=ExtResource( 6 )]

transform/pos = Vector2( 656, -2656 )

[node name="K" parent="." instance=ExtResource( 7 )]

transform/pos = Vector2( 410, 570 )
transform/scale = Vector2( 2.5, 2.5 )

[node name="Navo" type="Navigation2D" parent="."]

editor/display_folded = true
script/script = ExtResource( 8 )

[node name="Navajxo" type="NavigationPolygonInstance" parent="Navo"]

transform/pos = Vector2( -60, 0 )
navpoly = SubResource( 1 )
enabled = true

[node name="P" type="Node2D" parent="Navo"]

[node name="M" parent="Navo" instance=ExtResource( 9 )]

transform/pos = Vector2( 4112, -1296 )
transform/scale = Vector2( 2, 2 )

[node name="Kamero" type="Camera2D" parent="."]

anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 2.5, 2.5 )
limit/left = -10000000
limit/top = -10000000
limit/right = 10000000
limit/bottom = 10000000
drag_margin/h_enabled = true
drag_margin/v_enabled = true
smoothing/enable = false
smoothing/speed = 5.0
drag_margin/left = 0.2
drag_margin/top = 0.2
drag_margin/right = 0.2
drag_margin/bottom = 0.2

[node name="Kanvaso" type="CanvasLayer" parent="."]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )

[node name="Kontroliloj" type="Control" parent="Kanvaso"]

anchor/top = 1
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 1200.0
margin/right = 760.0
margin/bottom = 1160.0

[node name="Rapidi" type="TouchScreenButton" parent="Kanvaso/Kontroliloj"]

visibility/opacity = 0.4
transform/pos = Vector2( 295, 958 )
transform/scale = Vector2( 0.804688, 0.804688 )
normal = ExtResource( 10 )
pressed = ExtResource( 11 )
bitmask = null
shape = SubResource( 2 )
shape_centered = true
shape_visible = true
passby_press = false
action = "rapidi"
visibility_mode = 0

[node name="Turnu_dekstre" type="TouchScreenButton" parent="Kanvaso/Kontroliloj"]

visibility/opacity = 0.4
transform/pos = Vector2( 543, 940 )
normal = ExtResource( 12 )
pressed = ExtResource( 13 )
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = true
action = "turni_dekstre"
visibility_mode = 0

[node name="Turnu_maldekstre" type="TouchScreenButton" parent="Kanvaso/Kontroliloj"]

visibility/opacity = 0.4
transform/pos = Vector2( 0, 940 )
normal = ExtResource( 14 )
pressed = ExtResource( 15 )
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = true
action = "turni_maldekstre"
visibility_mode = 0

[node name="Bombi" type="TouchScreenButton" parent="Kanvaso/Kontroliloj"]

visibility/opacity = 0.4
transform/pos = Vector2( 624, 736 )
transform/scale = Vector2( 0.6, 0.6 )
normal = ExtResource( 16 )
pressed = ExtResource( 17 )
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = "bombi"
visibility_mode = 0

[node name="Nitrogenoj" type="ProgressBar" parent="Kanvaso"]

anchor/right = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 40.0
custom_styles/fg = SubResource( 3 )
range/min = 0.0
range/max = 200.0
range/step = 1.0
range/page = 0.0
range/value = 40.0
range/exp_edit = false
range/rounded = false
percent/visible = false

[node name="Vivo" type="ProgressBar" parent="Kanvaso"]

anchor/right = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 50.0
margin/right = 0.0
margin/bottom = 90.0
custom_styles/fg = SubResource( 4 )
range/min = 0.0
range/max = 200.0
range/step = 1.0
range/page = 0.0
range/value = 40.0
range/exp_edit = false
range/rounded = false
percent/visible = false

[node name="Bomboj" type="Label" parent="Kanvaso"]

anchor/left = 1
anchor/right = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 160.0
margin/top = 169.0
margin/right = 32.0
margin/bottom = 246.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "999"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Aspekto" type="Sprite" parent="Kanvaso/Bomboj"]

visibility/behind_parent = true
transform/pos = Vector2( 69, 20 )
transform/scale = Vector2( 1.3, 1.3 )
texture = ExtResource( 18 )

[node name="Montrilo" type="Control" parent="Kanvaso"]

editor/display_folded = true
anchor/left = 3
anchor/top = 3
anchor/right = 3
anchor/bottom = 3
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 400.0
margin/top = 600.0
margin/right = -336.0
margin/bottom = 560.0

[node name="Montrilo" type="Polygon2D" parent="Kanvaso/Montrilo"]

transform/pos = Vector2( 400, 630 )
polygon = Vector2Array( 450, 370, 420, 330, 420, 320, 480, 320, 480, 330 )
uv = Vector2Array(  )
color = Color( 0, 0, 0, 0.562863 )
vertex_colors = ColorArray(  )
offset = Vector2( -450, -170 )
texture/texture = null
texture/offset = Vector2( 0, 0 )
texture/scale = Vector2( 1, 1 )
texture/rotation = 0.0
invert/enable = false
invert/border = 100.0

[node name="FPS" type="Label" parent="Kanvaso"]

rect/scale = Vector2( 0.3, 0.3 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 10.0
margin/top = 50.0
margin/right = 82.0
margin/bottom = 127.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.458824, 0.458824, 0.458824, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 0
custom_constants/shadow_as_outline = 1
text = "99"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Rekomencu" type="Button" parent="Kanvaso"]

rect/scale = Vector2( 0.8, 0.8 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 112.0
margin/right = 140.0
margin/bottom = 246.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
icon = ExtResource( 19 )
flat = false

[node name="Nitrogeno_sono" type="StreamPlayer" parent="."]

stream/stream = ExtResource( 20 )
stream/play = false
stream/loop = false
stream/volume_db = 14.0
stream/autoplay = false
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[node name="Bombo_sono" type="StreamPlayer" parent="."]

stream/stream = ExtResource( 21 )
stream/play = false
stream/loop = false
stream/volume_db = 12.0
stream/autoplay = false
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[node name="Bombajxo_sono" type="StreamPlayer" parent="."]

stream/stream = ExtResource( 22 )
stream/play = true
stream/loop = false
stream/volume_db = 10.0
stream/autoplay = false
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[node name="Sparko" type="Particles2D" parent="."]

editor/display_folded = true
config/amount = 16
config/lifetime = 0.5
config/emitting = false
config/process_mode = 1
config/explosiveness = 0.9
params/direction = 0.0
params/spread = 20.0
params/linear_velocity = 400.0
params/spin_velocity = 0.0
params/orbit_velocity = 0.0
params/gravity_direction = 0.0
params/gravity_strength = 0.0
params/radial_accel = 0.0
params/tangential_accel = 0.0
params/damping = 0.0
params/initial_angle = 0.0
params/initial_size = 8.0
params/final_size = 12.0
params/hue_variation = 0.0
params/anim_speed_scale = 1.0
params/anim_initial_pos = 0.0
randomness/direction = 0.3
randomness/spread = 0.3
randomness/linear_velocity = 0.25
randomness/initial_size = 0.3
randomness/final_size = 0.5
randomness/hue_variation = 0.02
color/color = Color( 1, 0.768627, 0, 1 )

[node name="Sono" type="StreamPlayer" parent="Sparko"]

stream/stream = ExtResource( 23 )
stream/play = false
stream/loop = false
stream/volume_db = 5.0
stream/autoplay = false
stream/paused = false
stream/loop_restart_time = 1000.0
stream/buffering_ms = 500

[node name="Arboj" type="TileMap" parent="."]

transform/pos = Vector2( 0, -1280 )
transform/scale = Vector2( 5, 5 )
z/z = 1
z/relative = false
mode = 0
tile_set = ExtResource( 24 )
cell/size = Vector2( 64, 64 )
cell/quadrant_size = 16
cell/custom_transform = Matrix32( 1, 0, 0, 1, 0, 0 )
cell/half_offset = 2
cell/tile_origin = 1
cell/y_sort = false
collision/use_kinematic = false
collision/friction = 1.0
collision/bounce = 0.0
collision/layers = 0
collision/mask = 0
occluder/light_mask = 1
tile_data = IntArray( -2096943, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="Fonmuziko" type="StreamPlayer" parent="."]

stream/stream = ExtResource( 25 )
stream/play = false
stream/loop = true
stream/volume_db = 0.0
stream/autoplay = true
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[connection signal="pressed" from="Kanvaso/Rekomencu" to="." method="_on_Rekomencu_pressed"]


